as update 1